# rust-opengl

./: Cargo.toml  build.rs
assets/shaders/first/: circle.frag  circle.vert  coloured_primitive.vert
assets/shaders/second/: circle.frag  textured_primitive.frag  textured_primitive.vert
assets/shaders/third/: black_fill.frag  circle.frag  colour_fill.frag  coloured_primitive.frag  coloured_primitive.geom  coloured_primitive.vert  full_render.frag  full_render.geom  full_render.vert  point_and_size.vert  quad.geom  rectangle.frag  text.frag
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/src/: lib.rs
src/: error_handling.rs  main.rs  resources.rs  window.rs
src/examples/: circle_on_quad.rs  convert_font.rs  full_renderer.rs  mod.rs  points_driven_circle_on_quad.rs  points_driven_rectangle_on_quad.rs  points_driven_text_on_quad.rs  texture_coordinate_driven_circle_on_quad.rs  updateable_quads.rs  vertex_coloured_quad.rs  vertex_coloured_triangle.rs  vertex_coloured_triangle_with_geom_shader.rs  vertex_textured_quad.rs
src/render_gl/: buffer.rs  data.rs  font.rs  limits.rs  mod.rs  rendering.rs  shader.rs  texture.rs  vertices.rs  viewport.rs
